--- a/libsnappy.redist/libsnappy.redist.nuspec
+++ b/libsnappy.redist/libsnappy.redist.nuspec
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
+<package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>libsnappy.redist</id>
     <version>1.1.7</version>
@@ -14,6 +14,8 @@
     <copyright>Copyright 2019</copyright>
     <tags>native snappy C C++ nativepackage</tags>
     <repository type="git" url="https://github.com/bopohaa/Snappy.lib/libsnappy.redist" />
+    <license type="expression">MIT</license>
+    <iconUrl>https://raw.githubusercontent.com/bopohaa/Snappy.lib/master/icon.png</iconUrl>
   </metadata>
   <files>
     <file src="**" exclude=".git\**"/>
